<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/size_width"
                    android:layout_height="@dimen/size_height"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:src="@drawable/france_football_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding"
                    android:text="@string/label_teamA"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:text="@string/score_card"
                    android:textSize="@dimen/score_board" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/orange"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/score_three"
                    android:theme="@style/MyButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/orange"
                    android:onClick="addTowForTeamA"
                    android:text="@string/score_two"
                    android:theme="@style/MyButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/orange"
                    android:onClick="addOneForTeamA"
                    android:text="@string/free_throw"
                    android:theme="@style/MyButton"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/size_width"
                    android:layout_height="@dimen/size_height"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:src="@drawable/spain_football_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding"
                    android:text="@string/label_teamB"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:text="@string/score_card"
                    android:textSize="@dimen/score_board" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/orange"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/score_three"
                    android:theme="@style/MyButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/orange"
                    android:onClick="addTowForTeamB"
                    android:text="@string/score_two"
                    android:theme="@style/MyButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/orange"
                    android:onClick="addOneForTeamB"
                    android:text="@string/free_throw"
                    android:theme="@style/MyButton"/>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/reset_margin"
            android:layout_marginRight="@dimen/reset_margin"
            android:background="@color/orange"
            android:onClick="resetScore"
            android:text="@string/reset_text"
            android:theme="@style/MyButton"/>
    </ScrollView>
</RelativeLayout>